<resources>
    <string name="app_name">AKB-UAS</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AKB - UAS</string>
    <string name="nav_header_subtitle">Assignment for Final Test</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sub_title_reg">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_in_short">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sub_title_login">Login</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="logout">LOGOUT</string>
    <string name="repassword">Rewrite Password</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="text_have_acc">Do you have an account? Click bellow</string>
    <string name="text_not_have_acc">Don\'t have an account? Click bellow</string>
    <string name="err_null_email">Email must be filled!</string>
    <string name="err_null_pass">Password must be filled!</string>
    <string name="err_less_pass">Password need at least 6 characters!</string>
    <string name="err_null_repass">Re-Password must be filled!</string>
    <string name="err_not_equal_pass">Re-Password and Password must be same!</string>
    <string name="my_id">10121702</string>
    <string name="my_name">Bina Damareksa</string>
    <string name="my_classCode">AKB IF-7</string>
    <string name="my_email">binadama1997@gmail.com</string>
    <string name="profileTitle">MY PROFILE</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="hello">~HELLO~</string>
    <string name="text_about1">This app created for final test in my university</string>
    <string name="text_about2">The app\'s feature is Splash Screen, Nav Drawer, Profile about my bio, View Pager about this app and the last and main content is Notes</string>
    <string name="proceed">Proceed</string>
    <string name="sub_title_about1">~PAGE-1~</string>
    <string name="sub_title_about2">~PAGE-2~</string>
    <string name="search_text">Search</string>
    <string name="note_title_text">Enter Title</string>
    <string name="note_content">Enter Content</string>
    <string name="notes_date">Today\'s Date</string>
    <string name="notes_cont">Notes</string>
    <string name="new_notes_frament">New Notes</string>
    <string name="menu_newnotes">New Notes</string>
</resources>