<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_newnotes"
            android:icon="@drawable/ic_baseline_note_add_24"
            android:title="@string/menu_newnotes" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_note_24"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />

    </group>
</menu>