<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/profileTitle"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/myPhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/my_photo"
        android:layout_gravity="center_horizontal"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/myID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="310dp"
        android:text="@string/my_id"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/myName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="340dp"
        android:text="@string/my_name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/myClassCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="370dp"
        android:text="@string/my_classCode"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/myEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:text="@string/my_email"
        android:textSize="20sp"/>

</FrameLayout>